tests/good/syntax/057-case-4.clap
val x = 
  case { None => 42 }

