tests/bad/lexical/062-case-9.clap
val x = 
  case { x || _ => x }
 
